// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image test on ios allows styling 1`] = `
<View
  aspectRatio={1.5}
>
  <View
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        Object {
          "width": 100,
        },
      ]
    }
  >
    <Image
      aspectRatio={1.5}
      onLoad={[Function]}
      source={
        Object {
          "uri": "http://example.com/image.jpg",
        }
      }
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": undefined,
            "width": undefined,
          },
          undefined,
        ]
      }
    />
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "width": 100,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <BVLinearGradient
          colors={
            Array [
              "#f9f9f9",
              "#ededed",
            ]
          }
          end={
            Object {
              "x": -0.09302964577578221,
              "y": 0.11488204504197774,
            }
          }
          locations={
            Array [
              0,
              1,
            ]
          }
          start={
            Object {
              "x": 1,
              "y": 0,
            }
          }
          style={
            Array [
              Object {
                "flex": 1,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Image test on ios prepends https schema 1`] = `
<View
  aspectRatio={1.5}
>
  <View
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        Object {},
      ]
    }
  >
    <Image
      aspectRatio={1.5}
      onLoad={[Function]}
      source={
        Object {
          "uri": "https://example.com/image.jpg",
        }
      }
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": undefined,
            "width": undefined,
          },
          undefined,
        ]
      }
    />
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {},
        ]
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <BVLinearGradient
          colors={
            Array [
              "#f9f9f9",
              "#ededed",
            ]
          }
          end={
            Object {
              "x": -0.09302964577578221,
              "y": 0.11488204504197774,
            }
          }
          locations={
            Array [
              0,
              1,
            ]
          }
          start={
            Object {
              "x": 1,
              "y": 0,
            }
          }
          style={
            Array [
              Object {
                "flex": 1,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Image test on ios renders correctly 1`] = `
<View
  aspectRatio={1.5}
>
  <View
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        Object {},
      ]
    }
  >
    <Image
      aspectRatio={1.5}
      onLoad={[Function]}
      source={
        Object {
          "uri": "http://example.com/image.jpg",
        }
      }
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": undefined,
            "width": undefined,
          },
          undefined,
        ]
      }
    />
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {},
        ]
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <BVLinearGradient
          colors={
            Array [
              "#f9f9f9",
              "#ededed",
            ]
          }
          end={
            Object {
              "x": -0.09302964577578221,
              "y": 0.11488204504197774,
            }
          }
          locations={
            Array [
              0,
              1,
            ]
          }
          start={
            Object {
              "x": 1,
              "y": 0,
            }
          }
          style={
            Array [
              Object {
                "flex": 1,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;
